cv-julian-borges-md-index.html

--- a/cv-julian-borges-md-index.html
+++ b/cv-julian-borges-md-index.html
@@ -79,7 +79,38 @@ LinkedIn: <a href="https://www.linkedin.com/in/julian-borges-md/">julian-borges-
   <li>"Inverse Association: Testosterone & CVD Risk..." DOI:10.31579/2834-796X/073</li>
   <li>"AI in Pain Management..." DOI:10.33140/amlai.05.03.04</li>
   <li>"Machine Learning for Cardiovascular Risk" [Harvard Dataset]</li>
-  <li>...more available on GitHub and Dataverse</li>
+  <li>"Challenging the Salt Paradigm: Dietary Sodium and Cardiovascular Risk" - AJBSR (2024)</li>
+  <li>"Cardiovascular Disease Risk is Inversely Associated with Potassium Intake" - BJSTR (2024)</li>
+  <li>"AI in Pain Management" - AMLAI (2024)</li>
+  <li>"Oral Testosterone Therapy in Hypogonadal Men" - JSEDM (2024)</li>
+  <li>"Neuroplasticity Alterations Induced by Isotretinoin" - JPSRR (2024)</li>
+  <li>"Emerging Digital Health Interventions Toward Cardiovascular Care" - SSRN/Lancet (2025)</li>
+  <li>"Functional Foods and Nutraceuticals: Definitions and Health Benefits" - Book (2025)</li>
+  <li>"Impact of Renal Function on Digoxin Efficacy" - HMS GCSRT Study (2025)</li>
+  <li>"Auditing Shortcut Learning in AI-based Genomic Subtyping of Breast Cancer" - HMS Capstone (2025)</li>
+  <li>"Advancing Deep Learning for Identifying Heart Disease in Diabetics" - (Submitted 2025)</li>
+</ul>
+
+<h2>Peer Review Contributions</h2>
+<ul>
+  <li>PLOS Digital Health – 10+ articles</li>
+  <li>European Journal of Preventive Cardiology – Multiple systematic reviews</li>
+  <li>Diabetes & Metabolic Syndrome Clinical Research & Reviews – Technical and clinical studies</li>
+  <li>Review work includes telehealth, AI diagnostics, epidemiology, nutrition and cardiovascular modeling</li>
+</ul>
+
+<h2>Technical Proficiencies</h2>
+<p>
+  <strong>Languages & Tools:</strong> Python, R, SQL, Jupyter, Git<br>
+  <strong>Data Science:</strong> Pandas, Scikit-learn, StatsModels, TensorFlow, Keras<br>
+  <strong>Database:</strong> Snowflake, MongoDB, Redis, DynamoDB<br>
+  <strong>Clinical Research:</strong> REDCap, SPSS, MATLAB<br>
+  <strong>Documentation:</strong> Confluence, Google Suite, Microsoft Office<br>
+</p>
+
+<h2>Final Note</h2>
+<p>Dr. Borges continues to bridge clinical excellence with technological innovation to drive the future of personalized medicine, emphasizing ethics, patient outcomes, and scientific rigor.</p>
+
 </ul>
 
 <h2>Teaching Activities</h2>
